# os-lab1

./: CMakeLists.txt  LICENSE  README.md  disk_writer.c  disk_writer.h  file_aggregator.c  file_aggregator.h  main.c  urandom_writer.c  urandom_writer.h
